# Python-Disinheritance

./: README.md  disinheritance.py  pyproject.toml
.github/workflows/: python-publish.yml
disinheritance/: __init__.py
src/disinheritance/: _disinherit.py
src/disinheritance.egg-info/: PKG-INFO  SOURCES.txt
