[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "disinheritance"
description = "Direct management of inherited methods/attributes in subclassed object types"
version = "1.1.1"
authors = [
    {name = "Stanton K. Nielson"},
]
requires-python = ">= 3.10"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/stannielson/Python-Disinheritance"
