[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "disinheritance"
description = "Direct management of inherited methods/attributes in subclassed object types"
version = "1.1.1"
authors = [
    {name = "Stanton K. Nielson"},
]
requires-python = ">= 3.10"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/stannielson/Python-Disinheritance"